# extraction

./: .env.sample  .gitignore  README.md  data.json  frontend_loader.py  main.py  pyproject.toml  requirements.txt
services/: extraction.py
utils/: display_utils.py
